<resources>
    <string name="app_name">Ten Twenty Assignment</string>


    <!--Watch-->
    <string name="upcoming_movies_fragment_title">Watch</string>
    <string name="watch_bottom_nav_title">Watch</string>
    <string name="upcoming_movie_banner_title">Upcoming movie banner</string>
    <string name="no_video_found">No upcoming video found</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="watch_trailer">Watch Trailer</string>


    <!--Dashboard-->
    <string name="dashboard_fragment_title">Dashboard</string>
    <string name="dashboard_bottom_nav_title">Dashboard</string>


    <!--Media Library -->
    <string name="media_library_fragment_title">Media Library</string>
    <string name="media_library_bottom_nav_title">Media Library</string>


    <!--More-->
    <string name="more_fragment_title">More</string>
    <string name="more_bottom_nav_title">More</string>


    <!--Search-->
    <string name="nav_menu_search_title">Search</string>
    <string name="genres">Genres</string>
    <string name="action">Action</string>
    <string name="thriller">Thriller</string>
    <string name="fiction">Fiction</string>
    <string name="science">Science</string>

</resources>