<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/upComingMovies">

    <fragment
        android:id="@+id/upComingMovies"
        android:name="com.tentwenty.assignment.movies_list.presentation.watch.upcoming_movies_list.UpComingMoviesFragment"
        android:label="@string/upcoming_movies_fragment_title"
        tools:layout="@layout/fragment_up_coming_movies">
        <action
            android:id="@+id/action_upComingMovies_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.tentwenty.assignment.movies_list.presentation.dashboard.DashboardFragment"
        android:label="@string/dashboard_fragment_title"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.tentwenty.assignment.movies_list.presentation.media_library.MediaLibraryFragment"
        android:label="@string/media_library_fragment_title"
        tools:layout="@layout/fragment_media_library" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.tentwenty.assignment.movies_list.presentation.more.MoreFragment"
        android:label="@string/more_fragment_title"
        tools:layout="@layout/fragment_more" />


</navigation>