<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetails"
            type="com.tentwenty.assignment.movies_list.domain.model.MovieDetails" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more_fragment_title"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:urlToImage="@{movieDetails.poster_path}"
            tools:src="@drawable/demo_banner" />

        <TextView
            android:id="@+id/textViewMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{movieDetails.title}"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewPoster"
            app:layout_constraintEnd_toEndOf="@+id/imageViewPoster"
            app:layout_constraintLeft_toLeftOf="@+id/imageViewPoster"
            app:layout_constraintRight_toRightOf="@+id/imageViewPoster"
            app:layout_constraintStart_toStartOf="@+id/imageViewPoster"
            app:layout_constraintTop_toTopOf="@+id/imageViewPoster"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textViewReleasedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{movieDetails.release_date}"
            app:layout_constraintBottom_toTopOf="@+id/buttonGetTickets"
            app:layout_constraintEnd_toEndOf="@+id/imageViewPoster"
            app:layout_constraintLeft_toLeftOf="@+id/imageViewPoster"
            app:layout_constraintRight_toRightOf="@+id/imageViewPoster"
            app:layout_constraintStart_toStartOf="@+id/imageViewPoster"
            app:layout_constraintTop_toBottomOf="@+id/textViewMovieTitle" />

        <Button
            android:id="@+id/buttonGetTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_tickets"
            app:layout_constraintEnd_toEndOf="@+id/imageViewPoster"
            app:layout_constraintLeft_toLeftOf="@+id/imageViewPoster"
            app:layout_constraintRight_toRightOf="@+id/imageViewPoster"
            app:layout_constraintStart_toStartOf="@+id/imageViewPoster"
            app:layout_constraintTop_toBottomOf="@+id/textViewReleasedDate" />

        <Button
            android:id="@+id/buttonWatchTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_watch"
            android:text="@string/watch_trailer"
            app:layout_constraintEnd_toEndOf="@+id/imageViewPoster"
            app:layout_constraintLeft_toLeftOf="@+id/imageViewPoster"
            app:layout_constraintRight_toRightOf="@+id/imageViewPoster"
            app:layout_constraintStart_toStartOf="@+id/imageViewPoster"
            app:layout_constraintTop_toBottomOf="@+id/buttonGetTickets"
            app:srcCompat="@android:drawable/ic_menu_send" />


        <TextView
            android:id="@+id/textViewChipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Genres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonWatchTrailer" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewChipTitle">

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewOverview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:scrollbars="vertical"
            android:text="@{movieDetails.overview}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
